--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: Install Tidy Ubuntu
-        if: matrix.os == 'ubuntu-devel'
+        if: matrix.os == 'ubuntu-latest'
         run: sudo apt install -y tidy
       - name: set up R
         uses: r-lib/actions/setup-r@v2
@@ -50,14 +50,45 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-      - name: run R CMD CHECK tests
-        shell: bash
-        run: $GITHUB_WORKSPACE/test.sh
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          args: 'c("--as-cran")'
+          error-on: '"warning"'
+          check-dir: '"check"'
+          upload-results: '"true"'
+          upload-snapshots: '"true"'
   all-successful:
     runs-on: ubuntu-latest
-    needs: [version_check, devel_test]
+    #needs: [version_check, devel_test]
     steps:
       - name: Note that all tests succeeded
         run: echo "🎉"
+  build-tarball:
+    runs-on: ubuntu-latest
+    #needs: [all-successful]
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      - name: Install Tidy Ubuntu
+        run: sudo apt install -y tidy
+      - name: build tarball for submission to CRAN
+        run: R CMD build $GITHUB_WORKSPACE
+      - name: Grab tarball path
+        shell: bash
+        run: |
+          TAR_NAME="pkgnet_"
+          TAR_NAME+="$(grep -E "Version:"  $GITHUB_WORKSPACE/DESCRIPTION | cut -f2- -d: | awk '{$1=$1};1')"
+          TAR_NAME+=".tar.gz"
+          echo "TAR_NAME=$TAR_NAME" >> $GITHUB_ENV
+      - name: Upload tarball to run
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{env.TAR_NAME}}
+          path: ${{github.workspace}}/${{env.TAR_NAME}}
+          if-no-files-found: error
+          compression-level: 0 # already compressed
+
 
   
