uploads from r-lib/actions/check-r-package@v2 for more verbose logs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
           args: 'c("--as-cran")'
           error-on: '"warning"'
           check-dir: '"check"'
+          upload-results: '"true"'
+          upload-snapshots: '"true"'
       - name: upload coverage
         if: ${{ matrix.os == 'macos-latest' && matrix.r-version == 'release' }}
         shell: Rscript {0}
