--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -12,9 +12,11 @@ jobs:
     name: Confirm Whole Version Number
     runs-on: macos-latest
     steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
       - name: Grep Version in DESCRIPTION
         shell: bash
-        run: grep -E "Version:\s\d+\.\d+\.\d+$" DESCRIPTION
+        run: grep -E "Version:\s\d+\.\d+\.\d+$"  $GITHUB_WORKSPACE/DESCRIPTION
   build-website:
     name: build website PR
     needs: [version_check]
@@ -30,19 +32,17 @@ jobs:
           r-version: 'release'
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-tinytex@v2
-      - name: set up dependencies
-        shell: bash
-        env:
-          OS_NAME: 'macos-latest'
-        run: $GITHUB_WORKSPACE/.github/setup.sh
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: pkgdown
       - name: Build Site
         run: pkgdown::build_site()
         shell: Rscript {0}
-      - name: Commit and push changes for review
+      - name: Commit website doc changes
         run: |
             git config --local user.name "$GITHUB_ACTOR"
             git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-            git add man/\* NAMESPACE DESCRIPTION
-            git commit -m "Update documentation" || echo "No changes to commit"
+            git add docs/\*
+            git commit -m "Update website documentation" || echo "No changes to commit"
             git pull --ff-only
             git push origin
