gh action workflow edits for readability and act compatibility
'apt update' statements to allow act to run locally

align Roxygen in test packages

revised logic to balance act and gh actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
         if: ${ (env.ACT || false)}
         run: sudo apt update
       - name: Install Tidy Ubuntu
-        run: sudo apt install -y tidy
+        run: apt update && sudo apt install -y tidy
       - name: build tarball for submission to CRAN
         run: R CMD build $GITHUB_WORKSPACE
       - name: Grab tarball path
