--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -1,4 +1,4 @@
-name: smoke tests
+name: Smoke Tests
 
 # only build on merges to main
 on:
@@ -84,6 +84,9 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
+      - name: If local, apt update
+        if: ${{ (env.ACT || false) }}
+        run: sudo apt update
       - name: Install Tidy
         run: sudo apt install -y tidy 
       - name: Install Deps For Pkgnet & ${{ matrix.test_pkg }}
