--- a/inst/sartre/DESCRIPTION
+++ b/inst/sartre/DESCRIPTION
@@ -11,4 +11,5 @@ Maintainer: Brian Burns <brian.burns.opensource@gmail.com>
 Description: This package is used to test the functions in `pkgnet`.  It's a "nothing" network. Get it?
 License: file LICENSE
 LazyData: TRUE
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
+Roxygen: list(r6 = FALSE)
