--- a/inst/silverstein/DESCRIPTION
+++ b/inst/silverstein/DESCRIPTION
@@ -9,6 +9,7 @@ Imports:
     R6
 License: file LICENSE
 LazyData: TRUE
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Suggests: 
     testthat (>= 2.1.0)
+Roxygen: list(r6 = FALSE)
