--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -8,24 +8,24 @@ on:
   workflow_dispatch:
 
 jobs:
-  version_check:
-    name: Confirm Whole Version Number
-    runs-on: macos-latest
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: Grep Version in DESCRIPTION
-        shell: bash
-        run: grep -E "Version:\s\d+\.\d+\.\d+$"  $GITHUB_WORKSPACE/DESCRIPTION
   build-website:
-    name: build website PR
-    needs: [version_check]
+    name: build website docs on website_docs_update branch
     runs-on: macos-latest
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          fetch-depth: 0 # pull all tags and other history
+      - name: Get Latest Version Tag
+        id: previoustag
+        uses: WyriHaximus/github-action-get-previous-tag@v1.4.0
+        with: 
+          prefix: 'v'
+      - name: Git Checkout Branch From Latest Version Tag
+        run: |
+          git config --local user.name "$GITHUB_ACTOR"
+          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git checkout -b website_docs_update ${{steps.previoustag.outputs.tag}}
       - name: set up R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -38,11 +38,13 @@ jobs:
       - name: Build Site
         run: pkgdown::build_site()
         shell: Rscript {0}
-      - name: Commit website doc changes
+      - name: Save Site Docs Articfact
+        uses: actions/upload-artifact@v4
+        with:
+          name: "built_website_docs_${{steps.previoustag.outputs.tag}}"
+          path: ${{github.workspace}}/docs/
+      - name: Commit website doc changes (overwrite if existing)
         run: |
-            git config --local user.name "$GITHUB_ACTOR"
-            git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
             git add docs/\*
-            git commit -m "Update website documentation" || echo "No changes to commit"
-            git pull --ff-only
-            git push origin
+            git commit -m "Update website documentation to ${{steps.previoustag.outputs.tag}}" || echo "No changes to commit"
+            git push -f origin website_docs_update
