--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ importFrom(grDevices,colorRamp)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rgb)
 importFrom(igraph,V)
-importFrom(igraph,authority_score)
 importFrom(igraph,betweenness)
 importFrom(igraph,centr_betw_tmax)
 importFrom(igraph,centr_clo_tmax)
@@ -39,8 +38,8 @@ importFrom(igraph,centr_degree_tmax)
 importFrom(igraph,centralize)
 importFrom(igraph,closeness)
 importFrom(igraph,degree)
-importFrom(igraph,graph.edgelist)
-importFrom(igraph,hub_score)
+importFrom(igraph,graph_from_edgelist)
+importFrom(igraph,hits_scores)
 importFrom(igraph,make_empty_graph)
 importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
