Large Logging, Testing and iGraph Update (#339)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,18 +26,11 @@ importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setkeyv)
-importFrom(futile.logger,INFO)
-importFrom(futile.logger,flog.fatal)
-importFrom(futile.logger,flog.info)
-importFrom(futile.logger,flog.threshold)
-importFrom(futile.logger,flog.warn)
-importFrom(futile.logger,logger.options)
 importFrom(glue,glue)
 importFrom(grDevices,colorRamp)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rgb)
 importFrom(igraph,V)
-importFrom(igraph,authority_score)
 importFrom(igraph,betweenness)
 importFrom(igraph,centr_betw_tmax)
 importFrom(igraph,centr_clo_tmax)
@@ -45,10 +38,10 @@ importFrom(igraph,centr_degree_tmax)
 importFrom(igraph,centralize)
 importFrom(igraph,closeness)
 importFrom(igraph,degree)
-importFrom(igraph,graph.edgelist)
-importFrom(igraph,hub_score)
+importFrom(igraph,ego_size)
+importFrom(igraph,graph_from_edgelist)
+importFrom(igraph,hits_scores)
 importFrom(igraph,make_empty_graph)
-importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
